--- a/assets/css/color-schemes/colors-auto-deafualt-dark.scss
+++ b/assets/css/color-schemes/colors-auto-deafualt-dark.scss
@@ -6,7 +6,8 @@
 @import "colors";
 
 :root {
-    @include dark-colors;
+  @include header-colors;
+  @include dark-colors;
   }
     
 @media print, (prefers-color-scheme: light) {//we would not like to apply dark mode if content is on printer as that would use a lot of ink
