--- a/assets/css/color-schemes/colors-auto.scss
+++ b/assets/css/color-schemes/colors-auto.scss
@@ -4,6 +4,7 @@
 @import "colors";
 
 :root {
+  @include header-colors;
   @include light-colors;
 }
     
