--- a/assets/css/color-schemes/colors-dark.scss
+++ b/assets/css/color-schemes/colors-dark.scss
@@ -4,6 +4,7 @@
 @import "colors";
 
 :root {
+  @include header-colors;
   @include dark-colors;
 }
 
