--- a/assets/css/color-schemes/colors-light.scss
+++ b/assets/css/color-schemes/colors-light.scss
@@ -4,5 +4,6 @@
 @import "colors";
 
 :root {
+  @include header-colors;
   @include light-colors;
 }
